# plattli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  v2_plan.md
.github/workflows/: ci.yml  publish.yml
plattli/: __init__.py  _indices.py  bulk_writer.py  jsonl2plattli.py  reader.py  writer.py
tests/: test_bulk_writer.py  test_jsonl2plattli.py  test_reader.py  test_writer.py
